deploy app correção

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Uisma Lopes | Desenvolvedor Front-end" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://uismalopes.github.io/portfolio/" />
-    <meta property="og:image" content="https://uismalopes.github.io/portfolio/assets/images/logo-big.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo-big.png" />
     <meta property="og:description" content="Veja alguns projetos Front-end desenvolvidos ao longo da minha carreira." />
     <meta property="og:site_name" content="Uisma Lopes | Desenvolvedor Front-end" />
   </head>
